add rediscovery